Bug 977516 - Fix Aero Glass fog behind tabs in customization mode by moving it to ::after. r=Gijs
UltraBlame original commit: f7579d80f4ee17de02c42ad5604ff2aaa9d3d241

--- a/browser/themes/windows/browser-aero.css
+++ b/browser/themes/windows/browser-aero.css
@@ -250,7 +250,13 @@
     position: relative;
   }
 
-  #TabsToolbar:not(:-moz-lwtheme)::before {
+  #TabsToolbar:not(:-moz-lwtheme)::after {
+    
+
+
+
+
+    -moz-box-ordinal-group: 1001;
     box-shadow: 0 0 30px 30px rgba(174,189,204,0.85);
     content: "";
     display: -moz-box;
